--- a/index.html
+++ b/index.html
@@ -380,18 +380,16 @@
 
   </div>
 
-  <!-- Footer -->
-  <footer class="bg-light text-center text-lg-start">
-    
-
-    <!-- Copyright -->
-    <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2)">
-      © 2021 Copyright:
-      <a class="text-dark" href="#">Serayu Fansub</a>
-    </div>
-    <!-- Copyright -->
-  </footer>
-  <!-- Footer -->
+    <!-- Footer -->
+    <footer class="bg-light text-center text-lg-start">
+      <!-- Copyright -->
+      <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2)">
+        © 2021 Copyright:
+        <a class="text-dark" href="#">Serayu</a>
+      </div>
+      <!-- Copyright -->
+    </footer>
+    <!-- Footer -->
 
 
 
