--- a/index.html
+++ b/index.html
@@ -383,9 +383,9 @@
     <!-- Footer -->
     <footer class="bg-dark text-center text-lg-start">
       <!-- Copyright -->
-      <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2)">
+      <div class="text-center text-white p-3" style="background-color: rgba(0, 0, 0, 0.2)">
         © 2021 Copyright:
-        <a class="text-dark" href="#">Serayu</a>
+        <a class="text-white" href="#">Serayu</a>
       </div>
       <!-- Copyright -->
     </footer>
