--- a/index.html
+++ b/index.html
@@ -11,21 +11,25 @@
   <!-- css bootstrap -->
   <link href="vendor/css/bootstrap.css" rel="stylesheet">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.0/font/bootstrap-icons.css">
-  <!-- css padding body -->
+
 
   <style>
+    /* Background wallpaper */
     body {
       background-image: url(img/serayu_bg_light.png);
       background-size: cover;
       background-attachment: fixed;
     }
 
-
+    /* Card Collumn */
     .my-col {
       padding-left: 5px;
       padding-right: 5px;
     }
 
+
+
+    /* Caption Slideshow */
     .carousel-caption {
       right: 0%;
       left: 0%;
@@ -35,31 +39,26 @@
     }
 
 
-
+    /* Caption Control */
     .carousel-control-prev,
     .carousel-control-next {
       bottom: 50px;
 
     }
 
+    /* Card Title color */
     .img-overlay-anchor {
       color: white;
     }
 
+    /* Card Title background */
     .anchor-bg-color {
       top: 65%;
       height: 25%;
       background-color: rgba(0, 0, 0, 0.5);
     }
 
-    .hidethings {
-      display: none;
-    }
-
-    .myshowhover:hover+div {
-      display: block;
-    }
-
+    /* Slideshow caption on phone */
     @media (max-width: 575.98px) {
       .h5carousel {
         font-size: 80%;
@@ -70,10 +69,12 @@
       }
     }
 
+    /* Card border remove */
     .card {
       border: none;
     }
 
+    /*footer*/
     .footer-basic {
       padding: 10px 0;
       background-color: #ffffff;
@@ -123,8 +124,6 @@
       opacity: 0.75;
     }
 
-
-
     .footer-basic .social>a:hover {
       opacity: 0.9;
     }
@@ -136,7 +135,33 @@
       color: #aaa;
       margin-bottom: 0;
     }
-    
+
+    /*endfooter*/
+
+    .social {
+      text-align: center;
+      padding-bottom: 10px;
+      color: white;
+      border-radius: 15px;
+    }
+
+    .social>a {
+      font-size: 30px;
+      width: 40px;
+      height: 40px;
+      line-height: 40px;
+      display: inline-block;
+      text-align: center;
+      margin-top: 10px;
+      margin-left: 10px;
+      margin-right: 10px;
+      color: inherit;
+      opacity: 0.75;
+    }
+
+    .social>a:hover {
+      opacity: 0.9;
+    }
   </style>
 </head>
 
@@ -230,7 +255,7 @@
 
   <div class="container">
     <div class="row">
-      <div class="col-xs-12 col-lg-9 mb-4">
+      <div class="col-12 col-lg-9 mb-4">
 
         <!-- #SlideShow-->
         <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel" ">
@@ -289,6 +314,8 @@
 
     </div>
 
+
+    <!-- #Content-->
 
     <div class="row">
       <!-- #Catalog-->
@@ -419,27 +446,35 @@
           </div>
           <!-- #endCard -->
 
-
-
-
-
-
         </div>
+
       </div>
       <!-- #endcatalog -->
 
       <!-- #Sidebar-->
       <div class="col-12 col-sm-12 col-md-12 col-lg-3 ">
         <div class="row">
-          <div class="col-6 col-sm-6 col-md-6 col-lg-12">
-            <iframe src="https://discord.com/widget?id=788456247476617326&theme=dark" width="250" height="400"
+          <div class="col-12 col-sm-12 col-md-12 col-lg-12 mb-1">
+            <div class="social bg-dark">
+              <a href="#"><i class="bi bi-instagram"></i></a>
+              <a href="#"><i class="bi bi-discord"></i></a>
+              <a href="#"><i class="bi bi-facebook"></i></a>
+              <a href="#"><i class="bi bi-youtube"></i></a>
+            </div>
+          </div>
+
+
+          <div class="col-12 col-sm-6 col-md-6 col-lg-12 mb-1 d-flex justify-content-center">
+            <iframe class="embed-responsive-item"
+            src="https://discord.com/widget?id=788456247476617326&theme=dark" width="240" height="400"
               allowtransparency="true" frameborder="0"
               sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
           </div>
-          <div class="col-12 col-sm-6 col-md-6 col-lg-12">
-            <iframe
+
+          <div class="col-12 col-sm-6 col-md-6 col-lg-12 mb-1 d-flex justify-content-center">
+            <iframe class="embed-responsive-item "
               src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fweb.facebook.com%2Fserayufansub60fps%2Fcommunity%2F%3Fref%3Dpage_internal&tabs=timeline&width=250&height=500&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId"
-              width="250" height="400" style="border:none;overflow:hidden" scrolling="no" frameborder="0"
+              width="240" height="400" style="border:none;overflow:hidden" scrolling="no" frameborder="0"
               allowfullscreen="true"
               allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
           </div>
@@ -452,16 +487,23 @@
 
   </div>
 
+  <!-- #endContent -->
+
   <!-- Footer -->
-  <div class="footer-basic navbar-dark bg-dark">
+  <div class="footer-basic navbar-dark bg-dark mt-4">
     <footer>
-      <div class="social"><a href="#"><i class="bi bi-instagram"></i></a><a href="#"><i class="bi bi-discord"></i></a><a
-          href="#"><i class="bi bi-facebook"></i></a></div>
+      <div class="social">
+        <a href="#"><i class="bi bi-instagram"></i></a>
+        <a href="#"><i class="bi bi-discord"></i></a>
+        <a href="#"><i class="bi bi-facebook"></i></a>
+        <a href="#"><i class="bi bi-youtube"></i></a>
+      </div>
+
       <ul class="list-inline">
         <li class="list-inline-item"><a href="#">Home</a></li>
-        <li class="list-inline-item"><a href="#">Services</a></li>
-        <li class="list-inline-item"><a href="#">About</a></li>
-        <li class="list-inline-item"><a href="#">Terms</a></li>
+        <li class="list-inline-item"><a href="#">DMCA</a></li>
+        <li class="list-inline-item"><a href="#">About Us</a></li>
+        <li class="list-inline-item"><a href="#">Feedback</a></li>
         <li class="list-inline-item"><a href="#">Privacy Policy</a></li>
       </ul>
       <p class="copyright">Serayu Fansub © 2021</p>
