commit Css external baru

--- a/index.html
+++ b/index.html
@@ -12,157 +12,9 @@
   <link href="vendor/css/bootstrap.css" rel="stylesheet">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.0/font/bootstrap-icons.css">
 
+  <!-- Css main-->
+  <link rel="stylesheet" href="css/styleMain.css">
 
-  <style>
-    /* Background wallpaper */
-    body {
-      background-image: url(img/serayu_bg_light.png);
-      background-size: cover;
-      background-attachment: fixed;
-    }
-
-    /* Card Collumn */
-    .my-col {
-      padding-left: 5px;
-      padding-right: 5px;
-    }
-
-
-
-    /* Caption Slideshow */
-    .carousel-caption {
-      right: 0%;
-      left: 0%;
-      padding-top: 0px;
-      padding-bottom: 0px;
-      background-color: rgba(0, 0, 0, 0.5);
-    }
-
-
-    /* Caption Control */
-    .carousel-control-prev,
-    .carousel-control-next {
-      bottom: 50px;
-
-    }
-
-    /* Card Title color */
-    .img-overlay-anchor {
-      color: white;
-    }
-
-    /* Card Title background */
-    .anchor-bg-color {
-      top: 65%;
-      height: 25%;
-      background-color: rgba(0, 0, 0, 0.5);
-    }
-
-    /* Slideshow caption on phone */
-    @media (max-width: 575.98px) {
-      .h5carousel {
-        font-size: 80%;
-      }
-
-      .pcarousel {
-        font-size: 75%;
-      }
-    }
-
-    /* Card border remove */
-    .card {
-      border: none;
-    }
-
-    /*footer*/
-    .footer-basic {
-      padding: 10px 0;
-      background-color: #ffffff;
-      color: #4b4c4d;
-    }
-
-    .footer-basic ul {
-      padding: 0;
-      list-style: none;
-      text-align: center;
-      font-size: 18px;
-      line-height: 1.6;
-      margin-bottom: 0;
-    }
-
-    .footer-basic li {
-      padding: 0 10px;
-    }
-
-    .footer-basic ul a {
-      color: white;
-      text-decoration: none;
-      opacity: 0.8;
-    }
-
-    .footer-basic ul a:hover {
-      opacity: 1;
-    }
-
-    .footer-basic .social {
-      text-align: center;
-      padding-bottom: 10px;
-      color: white;
-    }
-
-    .footer-basic .social>a {
-      font-size: 34px;
-      width: 40px;
-      height: 40px;
-      line-height: 40px;
-      display: inline-block;
-      text-align: center;
-      margin-top: 10px;
-      margin-left: 15px;
-      margin-right: 15px;
-      color: inherit;
-      opacity: 0.75;
-    }
-
-    .footer-basic .social>a:hover {
-      opacity: 0.9;
-    }
-
-    .footer-basic .copyright {
-      margin-top: 15px;
-      text-align: center;
-      font-size: 13px;
-      color: #aaa;
-      margin-bottom: 0;
-    }
-
-    /*endfooter*/
-
-    .social {
-      text-align: center;
-      padding-bottom: 10px;
-      color: white;
-      border-radius: 15px;
-    }
-
-    .social>a {
-      font-size: 30px;
-      width: 40px;
-      height: 40px;
-      line-height: 40px;
-      display: inline-block;
-      text-align: center;
-      margin-top: 10px;
-      margin-left: 10px;
-      margin-right: 10px;
-      color: inherit;
-      opacity: 0.75;
-    }
-
-    .social>a:hover {
-      opacity: 0.9;
-    }
-  </style>
 </head>
 
 <body>
@@ -179,11 +31,6 @@
 
 
   <!-- #Header-->
-
-
-
-
-
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark mb-4">
     <div class="container">
 
@@ -465,9 +312,8 @@
 
 
           <div class="col-12 col-sm-6 col-md-6 col-lg-12 mb-1 d-flex justify-content-center">
-            <iframe class="embed-responsive-item"
-            src="https://discord.com/widget?id=788456247476617326&theme=dark" width="240" height="400"
-              allowtransparency="true" frameborder="0"
+            <iframe class="embed-responsive-item" src="https://discord.com/widget?id=788456247476617326&theme=dark"
+              width="240" height="400" allowtransparency="true" frameborder="0"
               sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
           </div>
 
