--- a/index.html
+++ b/index.html
@@ -15,6 +15,15 @@
   <!-- Css main-->
   <link rel="stylesheet" href="css/styleMain.css">
 
+  <style>
+    /* Background wallpaper */
+    body {
+        background-image: url(img/serayu_bg_light.png);
+        background-size: cover;
+        background-attachment: fixed;
+    }
+  </style>
+
 </head>
 
 <body>
@@ -99,6 +108,7 @@
 
 
 
+  <!-- #Content-->
 
   <div class="container">
     <div class="row">
@@ -162,7 +172,7 @@
     </div>
 
 
-    <!-- #Content-->
+    
 
     <div class="row">
       <!-- #Catalog-->
@@ -175,13 +185,13 @@
           <div class="col-6 col-sm-4 col-lg-3  mb-4 my-col">
             <div class="card">
               <a class="btn btn-success" href="movie.php"> Movie </a>
-              <a href="unduh.php" class="myshow"><img class="card-img-top h-100" src="img/nonawa.jpg">
+              <a href="AnimePages.html" class="myshow"><img class="card-img-top h-100" src="img/nonawa.jpg">
                 <div class="card-img-overlay anchor-bg-color">
                   <h5 class="card-title img-overlay-anchor"><strong>Judul</strong></h5>
                   <small class="text-white">Post on 20-02-2020</small>
                 </div>
               </a>
-              <a class="btn btn-primary" href="unduh"> Download </a>
+              <a class="btn btn-primary" href="AnimePages.html"> Download </a>
             </div>
           </div>
           <!-- #endCard -->
@@ -190,13 +200,13 @@
           <div class="col-6 col-sm-4 col-lg-3  mb-4 my-col">
             <div class="card">
               <a class="btn btn-success" href="movie.php"> Movie </a>
-              <a href="unduh.php" class="myshow"><img class="card-img-top h-100" src="img/nonawa.jpg">
+              <a href="AnimePages.html" class="myshow"><img class="card-img-top h-100" src="img/nonawa.jpg">
                 <div class="card-img-overlay anchor-bg-color">
                   <h5 class="card-title img-overlay-anchor"><strong>Judul</strong></h5>
                   <small class="text-white">Post on 20-02-2020</small>
                 </div>
               </a>
-              <a class="btn btn-primary" href="unduh"> Download </a>
+              <a class="btn btn-primary" href="AnimePages.html"> Download </a>
             </div>
           </div>
           <!-- #endCard -->
@@ -205,13 +215,13 @@
           <div class="col-6 col-sm-4 col-lg-3  mb-4 my-col">
             <div class="card">
               <a class="btn btn-success" href="movie.php"> Movie </a>
-              <a href="unduh.php" class="myshow"><img class="card-img-top h-100" src="img/nonawa.jpg">
+              <a href="AnimePages.html" class="myshow"><img class="card-img-top h-100" src="img/nonawa.jpg">
                 <div class="card-img-overlay anchor-bg-color">
                   <h5 class="card-title img-overlay-anchor"><strong>Judul</strong></h5>
                   <small class="text-white">Post on 20-02-2020</small>
                 </div>
               </a>
-              <a class="btn btn-primary" href="unduh"> Download </a>
+              <a class="btn btn-primary" href="AnimePages.html"> Download </a>
             </div>
           </div>
           <!-- #endCard -->
@@ -220,13 +230,13 @@
           <div class="col-6 col-sm-4 col-lg-3  mb-4 my-col">
             <div class="card">
               <a class="btn btn-success" href="movie.php"> Movie </a>
-              <a href="unduh.php" class="myshow"><img class="card-img-top h-100" src="img/nonawa.jpg">
+              <a href="AnimePages.html" class="myshow"><img class="card-img-top h-100" src="img/nonawa.jpg">
                 <div class="card-img-overlay anchor-bg-color">
                   <h5 class="card-title img-overlay-anchor"><strong>Judul</strong></h5>
                   <small class="text-white">Post on 20-02-2020</small>
                 </div>
               </a>
-              <a class="btn btn-primary" href="unduh"> Download </a>
+              <a class="btn btn-primary" href="AnimePages.html"> Download </a>
             </div>
           </div>
           <!-- #endCard -->
@@ -235,13 +245,13 @@
           <div class="col-6 col-sm-4 col-lg-3  mb-4 my-col">
             <div class="card">
               <a class="btn btn-success" href="movie.php"> Movie </a>
-              <a href="unduh.php" class="myshow"><img class="card-img-top h-100" src="img/nonawa.jpg">
+              <a href="AnimePages.html" class="myshow"><img class="card-img-top h-100" src="img/nonawa.jpg">
                 <div class="card-img-overlay anchor-bg-color">
                   <h5 class="card-title img-overlay-anchor"><strong>Judul</strong></h5>
                   <small class="text-white">Post on 20-02-2020</small>
                 </div>
               </a>
-              <a class="btn btn-primary" href="unduh"> Download </a>
+              <a class="btn btn-primary" href="AnimePages.html"> Download </a>
             </div>
           </div>
           <!-- #endCard -->
@@ -250,29 +260,13 @@
           <div class="col-6 col-sm-4 col-lg-3  mb-4 my-col">
             <div class="card">
               <a class="btn btn-success" href="movie.php"> Movie </a>
-              <a href="unduh.php" class="myshow"><img class="card-img-top h-100" src="img/nonawa.jpg">
+              <a href="AnimePages.html" class="myshow"><img class="card-img-top h-100" src="img/nonawa.jpg">
                 <div class="card-img-overlay anchor-bg-color">
                   <h5 class="card-title img-overlay-anchor"><strong>Judul</strong></h5>
                   <small class="text-white">Post on 20-02-2020</small>
                 </div>
               </a>
-              <a class="btn btn-primary" href="unduh"> Download </a>
-            </div>
-          </div>
-          <!-- #endCard -->
-
-
-          <!-- #Card-->
-          <div class="col-6 col-sm-4 col-lg-3  mb-4 my-col">
-            <div class="card">
-              <a class="btn btn-success" href="movie.php"> Movie </a>
-              <a href="unduh.php" class="myshow"><img class="card-img-top h-100" src="img/nonawa.jpg">
-                <div class="card-img-overlay anchor-bg-color">
-                  <h5 class="card-title img-overlay-anchor"><strong>Judul</strong></h5>
-                  <small class="text-white">Post on 20-02-2020</small>
-                </div>
-              </a>
-              <a class="btn btn-primary" href="unduh"> Download </a>
+              <a class="btn btn-primary" href="AnimePages.html"> Download </a>
             </div>
           </div>
           <!-- #endCard -->
@@ -282,13 +276,29 @@
           <div class="col-6 col-sm-4 col-lg-3  mb-4 my-col">
             <div class="card">
               <a class="btn btn-success" href="movie.php"> Movie </a>
-              <a href="unduh.php" class="myshow"><img class="card-img-top h-100" src="img/nonawa.jpg">
+              <a href="AnimePages.html" class="myshow"><img class="card-img-top h-100" src="img/nonawa.jpg">
                 <div class="card-img-overlay anchor-bg-color">
                   <h5 class="card-title img-overlay-anchor"><strong>Judul</strong></h5>
                   <small class="text-white">Post on 20-02-2020</small>
                 </div>
               </a>
-              <a class="btn btn-primary" href="unduh"> Download </a>
+              <a class="btn btn-primary" href="AnimePages.html"> Download </a>
+            </div>
+          </div>
+          <!-- #endCard -->
+
+
+          <!-- #Card-->
+          <div class="col-6 col-sm-4 col-lg-3  mb-4 my-col">
+            <div class="card">
+              <a class="btn btn-success" href="movie.php"> Movie </a>
+              <a href="AnimePages.html" class="myshow"><img class="card-img-top h-100" src="img/nonawa.jpg">
+                <div class="card-img-overlay anchor-bg-color">
+                  <h5 class="card-title img-overlay-anchor"><strong>Judul</strong></h5>
+                  <small class="text-white">Post on 20-02-2020</small>
+                </div>
+              </a>
+              <a class="btn btn-primary" href="AnimePages.html"> Download </a>
             </div>
           </div>
           <!-- #endCard -->
