commit animepages info header resize

--- a/AnimePages.html
+++ b/AnimePages.html
@@ -132,7 +132,7 @@
                                             </div>
                                             
     
-                                            <div class="text-center col-12">
+                                            <div class="text-center col-12 headerResize">
                                                 <H3>8.96</H3>
                                             </div>
                                         </div>
