--- a/AnimePages.html
+++ b/AnimePages.html
@@ -27,7 +27,9 @@
 
 <body>
 
-    <!-- Optional JavaScript -->
+    <!-- JavaScript -->
+    <script src="js/scriptMain.js"></script>
+
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="vendor/js/jquery-3.5.1.min.js">
     </script>
@@ -44,8 +46,8 @@
         <div class="container">
 
             <a class="navbar-brand" href="index.html" style="color: white;">
-                <a class="navbar-brand" href="#">
-                    <img src="img/SeraYu Logo.png" width="30" height="30" class="d-inline-block align-top" alt="">
+                <a class="navbar-brand" href="index.html">
+                    <img src="img/Serayu_Logo.png" width="30" height="30" class="d-inline-block align-top" alt="">
                     SeraYu Fansub</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive"
                     aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
@@ -116,8 +118,8 @@
 
                     <!-- #Gambar anime-->
                     <div class="col-6 offset-3 offset-md-0 col-md-4 mb-4 ">
-                        <img src="img/nonawa.jpg" class="img-fluid">
-                        
+                        <img src="img/Anime/Kimi_no_nawa.jpg" class="img-fluid">
+
                     </div>
                     <!-- #endGambar Anime -->
 
@@ -164,7 +166,11 @@
                                                     </tr>
                                                     <tr>
                                                         <th class="table-active px-1" scope="row">Genres</th>
-                                                        <td>Romance, Supernatural, School, Drama</td>
+                                                        <td><a href="#romance">Romance</a>,
+                                                            <a href="#Supernatural">Supernatural</a>,
+                                                            <a href="#School">School</a>,
+                                                            <a href="#Drama">Drama</a>,
+                                                        </td>
                                                     </tr>
                                                     <tr>
                                                         <th class="table-active px-1" scope="row">Studio</th>
@@ -181,47 +187,139 @@
                                 </div>
                             </div>
                         </div>
-
-                        <img src="img/Untitled-Support.jpg" alt="" class="img-fluid">
-
                         <!-- #endInformation Box -->
+
+
+                        <!-- #Iklan Box-->
+                        <div class="mb-2">
+                            <a href="">
+                                <img src="img/banner_iklan_Trakteer.png" alt="" class="img-fluid mb-2">
+                            </a>
+                        </div>
+                        <!-- #Iklan Box -->
+
                     </div>
 
-                    <div class="bg-white rounded-corner px-3 py-3 mb-4">
-                        <div class="col-12 bg-light rounded-corner border  ">
+                    <!-- #Description Box-->
+                    <div class="col-12">
+                        <div class="bg-white rounded-corner px-3 py-3 mb-4">
+                            <div class="col-12 bg-light rounded-corner border  ">
 
-                            <div class="col-12 px-0 py-1 text-justify">
-                                <div class="bg-primary text-white text-center rounded-corner border score">
-                                    Description
+                                <div class="col-12 px-0 py-1 text-justify">
+                                    <a onclick="spoiler_desc()" data-toggle="collapse" href="#collapseDesc" role="button"
+                                        aria-expanded="false" aria-controls="collapseDesc">
+                                        <div class="bg-primary text-white text-center rounded-corner border score mb-1">
+                                            Description
+                                        </div>
+                                    </a>
+
+
+                                    <div>
+                                        <p>Mitsuha Miyamizu, a high school girl, yearns to live the life of a boy in the
+                                            bustling
+                                            city of Tokyo—a dream that stands in stark contrast to her present life in
+                                            the
+                                            countryside. Meanwhile in the city, Taki Tachibana lives a busy life as a
+                                            high
+                                            school
+                                            student while juggling his part-time job and hopes for a future in
+                                            architecture.
+                                        </p>
+
+                                        <div class="collapse" id="collapseDesc">
+                                            <p>
+                                                One day, Mitsuha awakens in a room that is not her own and suddenly
+                                                finds
+                                                herself
+                                                living
+                                                the dream life in Tokyo—but in Taki's body! Elsewhere, Taki finds
+                                                himself
+                                                living
+                                                Mitsuha's life in the humble countryside. In pursuit of an answer to
+                                                this
+                                                strange
+                                                phenomenon, they begin to search for one another.
+                                            </p>
+                                            <p>
+                                                Kimi no Na wa. revolves around Mitsuha and Taki's actions, which begin
+                                                to
+                                                have a
+                                                dramatic impact on each other's lives, weaving them into a fabric held
+                                                together
+                                                by
+                                                fate
+                                                and circumstance.
+                                            </p>
+                                        </div>
+
+
+                                        <a onclick="spoiler_desc()" id="spoiler_desc" data-toggle="collapse"
+                                            href="#collapseDesc" role="button" aria-expanded="false"
+                                            aria-controls="collapseDesc">
+                                            See More..
+                                        </a>
+                                    </div>
+
                                 </div>
-                                <p>Mitsuha Miyamizu, a high school girl, yearns to live the life of a boy in the
-                                    bustling
-                                    city of Tokyo—a dream that stands in stark contrast to her present life in the
-                                    countryside. Meanwhile in the city, Taki Tachibana lives a busy life as a high
-                                    school
-                                    student while juggling his part-time job and hopes for a future in architecture.
-                                </p>
-                                <p>
-                                    One day, Mitsuha awakens in a room that is not her own and suddenly finds
-                                    herself
-                                    living
-                                    the dream life in Tokyo—but in Taki's body! Elsewhere, Taki finds himself living
-                                    Mitsuha's life in the humble countryside. In pursuit of an answer to this
-                                    strange
-                                    phenomenon, they begin to search for one another.
-                                </p>
-                                <p>
-                                    Kimi no Na wa. revolves around Mitsuha and Taki's actions, which begin to have a
-                                    dramatic impact on each other's lives, weaving them into a fabric held together
-                                    by
-                                    fate
-                                    and circumstance.
-                                </p>
                             </div>
                         </div>
+
                     </div>
 
-                    
+                    <!-- #EndDescription Box-->
+
+                    <div class="col-12">
+                        <div class="bg-white rounded-corner px-3 py-3 mb-4">
+                            <div class="col-12 bg-light rounded-corner border  ">
+
+                                <div class="col-12 px-0 py-1 text-justify">
+                                    <a onclick="spoiler_video()" data-toggle="collapse" href="#collapseSS" role="button"
+                                        aria-expanded="false" aria-controls="collapseSS">
+                                        <div class="bg-primary text-white text-center rounded-corner border score mb-1">
+                                            Trailer and Screenshot
+                                        </div>
+                                    </a>
+
+
+                                    <div class="col-12">
+                                        <div class="row">
+                                            <div class="embed-responsive embed-responsive-16by9 col-12 col-md-10 offset-md-1  mb-1">
+                                                <iframe class="embed-responsive-item"
+                                                    src="https://www.youtube.com/embed/3KR8_igDs1Y"
+                                                    allowfullscreen></iframe>
+                                            </div>
+
+                                            <div class="collapse col-12" id="collapseSS">
+                                                <div class="row">
+                                                    <div class="col-12 col-sm-6 mb-1">
+                                                        <img src="img/Screenshot/kimi_no_nawa_ss1.jpg" alt=""
+                                                            class="img-fluid">
+                                                    </div>
+                                                    <div class="col-12 col-sm-6 mb-1">
+                                                        <img src="img/Screenshot/kimi_no_nawa_ss2.jpg" alt=""
+                                                            class="img-fluid">
+                                                    </div>
+                                                </div>
+                                            </div>
+
+                                            <div class="col-12">
+                                                <a onclick="spoiler_video()" id="spoiler_video" data-toggle="collapse"
+                                                    href="#collapseSS" role="button" aria-expanded="false"
+                                                    aria-controls="collapseSS">
+                                                    See More..
+                                                </a>
+                                            </div>
+
+                                        </div>
+                                    </div>
+
+                                </div>
+                            </div>
+                        </div>
+
+                    </div>
+
+
                 </div>
 
             </div>
@@ -232,10 +330,11 @@
                 <div class="row">
                     <div class="col-12 col-sm-12 col-md-12 col-lg-12 mb-1">
                         <div class="social bg-dark">
-                            <a href="#"><i class="bi bi-instagram"></i></a>
-                            <a href="#"><i class="bi bi-discord"></i></a>
-                            <a href="#"><i class="bi bi-facebook"></i></a>
-                            <a href="#"><i class="bi bi-youtube"></i></a>
+                            <a href="https://www.instagram.com/serayufansub/"><i class="bi bi-instagram"></i></a>
+                            <a href="https://discord.com/invite/ycTY2gk9k3"><i class="bi bi-discord"></i></a>
+                            <a href="https://www.facebook.com/serayufansub60fps/"><i class="bi bi-facebook"></i></a>
+                            <a href="https://www.youtube.com/channel/UCUJYB4Sr7A2R7RhjPeEiW_Q"><i
+                                    class="bi bi-youtube"></i></a>
                         </div>
                     </div>
 
@@ -269,14 +368,14 @@
     <div class="footer-basic navbar-dark bg-dark mt-4">
         <footer>
             <div class="social">
-                <a href="#"><i class="bi bi-instagram"></i></a>
-                <a href="#"><i class="bi bi-discord"></i></a>
-                <a href="#"><i class="bi bi-facebook"></i></a>
-                <a href="#"><i class="bi bi-youtube"></i></a>
+                <a href="https://www.instagram.com/serayufansub/"><i class="bi bi-instagram"></i></a>
+                <a href="https://discord.com/invite/ycTY2gk9k3"><i class="bi bi-discord"></i></a>
+                <a href="https://www.facebook.com/serayufansub60fps/"><i class="bi bi-facebook"></i></a>
+                <a href="https://www.youtube.com/channel/UCUJYB4Sr7A2R7RhjPeEiW_Q"><i class="bi bi-youtube"></i></a>
             </div>
 
             <ul class="list-inline">
-                <li class="list-inline-item"><a href="#">Home</a></li>
+                <li class="list-inline-item"><a href="index.html">Home</a></li>
                 <li class="list-inline-item"><a href="#">DMCA</a></li>
                 <li class="list-inline-item"><a href="#">About Us</a></li>
                 <li class="list-inline-item"><a href="#">Feedback</a></li>
