--- a/index.html
+++ b/index.html
@@ -18,17 +18,18 @@
   <style>
     /* Background wallpaper */
     body {
-        background-image: url(img/serayu_bg_light.png);
-        background-size: cover;
-        background-attachment: fixed;
+      background-image: url(img/serayu_bg_light.png);
+      background-size: cover;
+      background-attachment: fixed;
     }
   </style>
 
 </head>
 
 <body>
+  <!-- JavaScript -->
+  <script src="js/scriptMain.js"></script>
 
-  <!-- Optional JavaScript -->
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
   <script src="vendor/js/jquery-3.5.1.min.js">
   </script>
@@ -44,8 +45,8 @@
     <div class="container">
 
       <a class="navbar-brand" href="index.html" style="color: white;">
-        <a class="navbar-brand" href="#">
-          <img src="img/SeraYu Logo.png" width="30" height="30" class="d-inline-block align-top" alt="">
+        <a class="navbar-brand" href="index.html">
+          <img src="img/Serayu_Logo.png" width="30" height="30" class="d-inline-block align-top" alt="">
           SeraYu Fansub</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive"
           aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
@@ -133,7 +134,7 @@
 
           <div class="carousel-inner">
             <div class="carousel-item active">
-              <img src="img/logo_banner.png" class="d-block w-100" alt="...">
+              <img src="img/banner_fp_logo_banner.png" class="d-block w-100" alt="...">
               <div class="carousel-caption d-md-block">
                 <h5 class="h5carousel">Selamat Datang di SeraYu Fansub</h5>
                 <p class="pcarousel">Terima kasih telah mengunjungi website kami. Nikmati anime kesukaan mu dalam 60 fps
@@ -141,7 +142,7 @@
               </div>
             </div>
             <div class="carousel-item">
-              <img src="img/under contructioon.png" class="d-block w-100" alt="...">
+              <img src="img/banner_fp_under contructioon.png" class="d-block w-100" alt="...">
               <div class="carousel-caption d-md-block">
                 <h5 class="h5carousel">Website Masih Dalam Tahap Beta</h5>
                 <p class="pcarousel">ini merupakan website baru kami, mohon maaf bila kalian menemukan bug yang
@@ -152,7 +153,7 @@
               </div>
             </div>
             <div class="carousel-item">
-              <img src="img/support.png" class="d-block w-100" alt="...">
+              <img src="img/banner_fp_under contructioon.png" class="d-block w-100" alt="...">
               <div class="carousel-caption d-md-block">
                 <h5 class="h5carousel">Tolong Support Kami</h5>
                 <p class="pcarousel">Support kalian merupakan hal terpenting bagi kami. Share website ini ke teman
@@ -172,7 +173,7 @@
     </div>
 
 
-    
+
 
     <div class="row">
       <!-- #Catalog-->
@@ -185,7 +186,7 @@
           <div class="col-6 col-sm-4 col-lg-3  mb-4 my-col">
             <div class="card">
               <a class="btn btn-success" href="movie.php"> Movie </a>
-              <a href="AnimePages.html" class="myshow"><img class="card-img-top h-100" src="img/nonawa.jpg">
+              <a href="AnimePages.html" class="myshow"><img class="card-img-top h-100" src="img/Anime/Kimi_no_nawa.jpg">
                 <div class="card-img-overlay anchor-bg-color">
                   <h5 class="card-title img-overlay-anchor"><strong>Judul</strong></h5>
                   <small class="text-white">Post on 20-02-2020</small>
@@ -200,7 +201,7 @@
           <div class="col-6 col-sm-4 col-lg-3  mb-4 my-col">
             <div class="card">
               <a class="btn btn-success" href="movie.php"> Movie </a>
-              <a href="AnimePages.html" class="myshow"><img class="card-img-top h-100" src="img/nonawa.jpg">
+              <a href="AnimePages.html" class="myshow"><img class="card-img-top h-100" src="img/Anime/Kimi_no_nawa.jpg">
                 <div class="card-img-overlay anchor-bg-color">
                   <h5 class="card-title img-overlay-anchor"><strong>Judul</strong></h5>
                   <small class="text-white">Post on 20-02-2020</small>
@@ -215,7 +216,7 @@
           <div class="col-6 col-sm-4 col-lg-3  mb-4 my-col">
             <div class="card">
               <a class="btn btn-success" href="movie.php"> Movie </a>
-              <a href="AnimePages.html" class="myshow"><img class="card-img-top h-100" src="img/nonawa.jpg">
+              <a href="AnimePages.html" class="myshow"><img class="card-img-top h-100" src="img/Anime/Kimi_no_nawa.jpg">
                 <div class="card-img-overlay anchor-bg-color">
                   <h5 class="card-title img-overlay-anchor"><strong>Judul</strong></h5>
                   <small class="text-white">Post on 20-02-2020</small>
@@ -230,7 +231,7 @@
           <div class="col-6 col-sm-4 col-lg-3  mb-4 my-col">
             <div class="card">
               <a class="btn btn-success" href="movie.php"> Movie </a>
-              <a href="AnimePages.html" class="myshow"><img class="card-img-top h-100" src="img/nonawa.jpg">
+              <a href="AnimePages.html" class="myshow"><img class="card-img-top h-100" src="img/Anime/Kimi_no_nawa.jpg">
                 <div class="card-img-overlay anchor-bg-color">
                   <h5 class="card-title img-overlay-anchor"><strong>Judul</strong></h5>
                   <small class="text-white">Post on 20-02-2020</small>
@@ -245,7 +246,7 @@
           <div class="col-6 col-sm-4 col-lg-3  mb-4 my-col">
             <div class="card">
               <a class="btn btn-success" href="movie.php"> Movie </a>
-              <a href="AnimePages.html" class="myshow"><img class="card-img-top h-100" src="img/nonawa.jpg">
+              <a href="AnimePages.html" class="myshow"><img class="card-img-top h-100" src="img/Anime/Kimi_no_nawa.jpg">
                 <div class="card-img-overlay anchor-bg-color">
                   <h5 class="card-title img-overlay-anchor"><strong>Judul</strong></h5>
                   <small class="text-white">Post on 20-02-2020</small>
@@ -260,23 +261,7 @@
           <div class="col-6 col-sm-4 col-lg-3  mb-4 my-col">
             <div class="card">
               <a class="btn btn-success" href="movie.php"> Movie </a>
-              <a href="AnimePages.html" class="myshow"><img class="card-img-top h-100" src="img/nonawa.jpg">
-                <div class="card-img-overlay anchor-bg-color">
-                  <h5 class="card-title img-overlay-anchor"><strong>Judul</strong></h5>
-                  <small class="text-white">Post on 20-02-2020</small>
-                </div>
-              </a>
-              <a class="btn btn-primary" href="AnimePages.html"> Download </a>
-            </div>
-          </div>
-          <!-- #endCard -->
-
-
-          <!-- #Card-->
-          <div class="col-6 col-sm-4 col-lg-3  mb-4 my-col">
-            <div class="card">
-              <a class="btn btn-success" href="movie.php"> Movie </a>
-              <a href="AnimePages.html" class="myshow"><img class="card-img-top h-100" src="img/nonawa.jpg">
+              <a href="AnimePages.html" class="myshow"><img class="card-img-top h-100" src="img/Anime/Kimi_no_nawa.jpg">
                 <div class="card-img-overlay anchor-bg-color">
                   <h5 class="card-title img-overlay-anchor"><strong>Judul</strong></h5>
                   <small class="text-white">Post on 20-02-2020</small>
@@ -292,7 +277,23 @@
           <div class="col-6 col-sm-4 col-lg-3  mb-4 my-col">
             <div class="card">
               <a class="btn btn-success" href="movie.php"> Movie </a>
-              <a href="AnimePages.html" class="myshow"><img class="card-img-top h-100" src="img/nonawa.jpg">
+              <a href="AnimePages.html" class="myshow"><img class="card-img-top h-100" src="img/Anime/Kimi_no_nawa.jpg">
+                <div class="card-img-overlay anchor-bg-color">
+                  <h5 class="card-title img-overlay-anchor"><strong>Judul</strong></h5>
+                  <small class="text-white">Post on 20-02-2020</small>
+                </div>
+              </a>
+              <a class="btn btn-primary" href="AnimePages.html"> Download </a>
+            </div>
+          </div>
+          <!-- #endCard -->
+
+
+          <!-- #Card-->
+          <div class="col-6 col-sm-4 col-lg-3  mb-4 my-col">
+            <div class="card">
+              <a class="btn btn-success" href="movie.php"> Movie </a>
+              <a href="AnimePages.html" class="myshow"><img class="card-img-top h-100" src="img/Anime/Kimi_no_nawa.jpg">
                 <div class="card-img-overlay anchor-bg-color">
                   <h5 class="card-title img-overlay-anchor"><strong>Judul</strong></h5>
                   <small class="text-white">Post on 20-02-2020</small>
@@ -313,10 +314,10 @@
         <div class="row">
           <div class="col-12 col-sm-12 col-md-12 col-lg-12 mb-1">
             <div class="social bg-dark">
-              <a href="#"><i class="bi bi-instagram"></i></a>
-              <a href="#"><i class="bi bi-discord"></i></a>
-              <a href="#"><i class="bi bi-facebook"></i></a>
-              <a href="#"><i class="bi bi-youtube"></i></a>
+              <a href="https://www.instagram.com/serayufansub/"><i class="bi bi-instagram"></i></a>
+              <a href="https://discord.com/invite/ycTY2gk9k3"><i class="bi bi-discord"></i></a>
+              <a href="https://www.facebook.com/serayufansub60fps/"><i class="bi bi-facebook"></i></a>
+              <a href="https://www.youtube.com/channel/UCUJYB4Sr7A2R7RhjPeEiW_Q"><i class="bi bi-youtube"></i></a>
             </div>
           </div>
 
@@ -349,14 +350,14 @@
   <div class="footer-basic navbar-dark bg-dark mt-4">
     <footer>
       <div class="social">
-        <a href="#"><i class="bi bi-instagram"></i></a>
-        <a href="#"><i class="bi bi-discord"></i></a>
-        <a href="#"><i class="bi bi-facebook"></i></a>
-        <a href="#"><i class="bi bi-youtube"></i></a>
+        <a href="https://www.instagram.com/serayufansub/"><i class="bi bi-instagram"></i></a>
+        <a href="https://discord.com/invite/ycTY2gk9k3"><i class="bi bi-discord"></i></a>
+        <a href="https://www.facebook.com/serayufansub60fps/"><i class="bi bi-facebook"></i></a>
+        <a href="https://www.youtube.com/channel/UCUJYB4Sr7A2R7RhjPeEiW_Q"><i class="bi bi-youtube"></i></a>
       </div>
 
       <ul class="list-inline">
-        <li class="list-inline-item"><a href="#">Home</a></li>
+        <li class="list-inline-item"><a href="index.html">Home</a></li>
         <li class="list-inline-item"><a href="#">DMCA</a></li>
         <li class="list-inline-item"><a href="#">About Us</a></li>
         <li class="list-inline-item"><a href="#">Feedback</a></li>
