--- a/AnimePages.html
+++ b/AnimePages.html
@@ -47,7 +47,7 @@
 
             <a class="navbar-brand" href="index.html" style="color: white;">
                 <a class="navbar-brand" href="index.html">
-                    <img src="img/Serayu_Logo.png" width="30" height="30" class="d-inline-block align-top" alt="">
+                    <img src="img/SeraYu_Logo.png" width="30" height="30" class="d-inline-block align-top" alt="">
                     SeraYu Fansub</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive"
                     aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
