commit animepages link and last beda commit

--- a/index.html
+++ b/index.html
@@ -329,8 +329,8 @@
           </div>
 
           <div class="col-12 col-sm-6 col-md-6 col-lg-12 mb-1 d-flex justify-content-center">
-            <iframe class="embed-responsive-item "
-              src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fweb.facebook.com%2Fserayufansub60fps%2Fcommunity%2F%3Fref%3Dpage_internal&tabs=timeline&width=250&height=500&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId"
+            <iframe class="embed-responsive-item"
+              src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2Fserayufansub60fps%2F&tabs=timeline&width=240&height=400&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId"
               width="240" height="400" style="border:none;overflow:hidden" scrolling="no" frameborder="0"
               allowfullscreen="true"
               allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
