--- a/AnimePages.html
+++ b/AnimePages.html
@@ -158,7 +158,7 @@
                                                 <tbody>
                                                     <tr>
                                                         <th class="table-active px-1" scope="row">Type</th>
-                                                        <td colspan="3">Movies</td>
+                                                        <td>Movies</td>
                                                     </tr>
                                                     <tr>
                                                         <th class="table-active px-1" scope="row">Aired</th>
@@ -206,8 +206,8 @@
                             <div class="col-12 bg-light rounded-corner border  ">
 
                                 <div class="col-12 px-0 py-1 text-justify">
-                                    <a onclick="spoiler_desc()" data-toggle="collapse" href="#collapseDesc" role="button"
-                                        aria-expanded="false" aria-controls="collapseDesc">
+                                    <a onclick="spoiler_desc()" data-toggle="collapse" href="#collapseDesc"
+                                        role="button" aria-expanded="false" aria-controls="collapseDesc">
                                         <div class="bg-primary text-white text-center rounded-corner border score mb-1">
                                             Description
                                         </div>
@@ -268,6 +268,7 @@
 
                     <!-- #EndDescription Box-->
 
+                    <!-- #Trailer Box-->
                     <div class="col-12">
                         <div class="bg-white rounded-corner px-3 py-3 mb-4">
                             <div class="col-12 bg-light rounded-corner border  ">
@@ -283,7 +284,8 @@
 
                                     <div class="col-12">
                                         <div class="row">
-                                            <div class="embed-responsive embed-responsive-16by9 col-12 col-md-10 offset-md-1  mb-1">
+                                            <div
+                                                class="embed-responsive embed-responsive-16by9 col-12 col-md-10 offset-md-1  mb-1">
                                                 <iframe class="embed-responsive-item"
                                                     src="https://www.youtube.com/embed/3KR8_igDs1Y"
                                                     allowfullscreen></iframe>
@@ -318,6 +320,101 @@
                         </div>
 
                     </div>
+                    <!-- #EndTrailer Box-->
+
+                    <div class="col-12">
+                        <div class="bg-white rounded-corner px-3 py-3 mb-4">
+                            <div class="col-12 bg-light rounded-corner border  ">
+
+                                <div class="col-12 px-0 py-1 text-justify">
+                                    <div class="bg-primary text-white text-center rounded-corner border score mb-1">
+                                        Anime and Subtittle Link
+                                    </div>
+                                    </a>
+
+                                    <div class="col-12">
+                                        <div class="row">
+                                            <div class="col-12">
+
+                                                <div class="row">
+                                                    <p class="col-12 mt-4">Google Drive</p>
+
+                                                    <table class="table table-sm tableBottom infoAnime table-bordered ">
+                                                        <tbody>
+                                                            <tr>
+                                                                <td><a href="">Kimi No Nawa Episode 1</a></td>
+                                                                <td><a href="">Subtitle only Episode 1</a></td>
+                                                            </tr>
+                                                            <tr>
+                                                                <td><a href="">Kimi No Nawa Episode 2</a></td>
+                                                                <td><a href="">Subtitle only Episode 2</a></td>
+                                                            </tr>
+                                                            <tr>
+                                                                <td><a href="">Kimi No Nawa Episode 3</a></td>
+                                                                <td><a href="">Subtitle only Episode 3</a></td>
+                                                            </tr>
+                                                            <tr>
+                                                                <td><a href="">Kimi No Nawa Episode 4</a></td>
+                                                                <td><a href="">Subtitle only Episode 4</a></td>
+                                                            </tr>
+                                                            <tr>
+                                                                <td><a href="">Kimi No Nawa Episode 5</a></td>
+                                                                <td><a href="">Subtitle only Episode 5</a></td>
+                                                            </tr>
+                                                            <tr>
+                                                                <td><a href="">Kimi No Nawa Episode 6</a></td>
+                                                                <td><a href="">Subtitle only Episode 6</a></td>
+                                                            </tr>
+                                                            <tr>
+                                                                <td><a href="">Kimi No Nawa Episode 7</a></td>
+                                                                <td><a href="">Subtitle only Episode 7</a></td>
+                                                            </tr>
+                                                            <tr>
+                                                                <td><a href="">Kimi No Nawa Episode 8</a></td>
+                                                                <td><a href="">Subtitle only Episode 8</a></td>
+                                                            </tr>
+                                                            <tr>
+                                                                <td><a href="">Kimi No Nawa Episode 9</a></td>
+                                                                <td><a href="">Subtitle only Episode 9</a></td>
+                                                            </tr>
+                                                            <tr>
+                                                                <td><a href="">Kimi No Nawa Episode 10</a></td>
+                                                                <td><a href="">Subtitle only Episode 10</a></td>
+                                                            </tr>
+                                                            <tr>
+                                                                <td><a href="">Kimi No Nawa Episode 11</a></td>
+                                                                <td><a href="">Subtitle only Episode 11</a></td>
+                                                            </tr>
+                                                            <tr>
+                                                                <td><a href="">Kimi No Nawa Episode 12</a></td>
+                                                                <td><a href="">Subtitle only Episode 12</a></td>
+                                                            </tr>
+                                                            <tr>
+                                                                <td><a href="">Kimi No Nawa Episode 13</a></td>
+                                                                <td><a href="">Subtitle only Episode 13</a></td>
+                                                            </tr>
+                                                        </tbody>
+                                                    </table>
+                                                </div>
+
+                                            </div>
+
+                                        </div>
+                                    </div>
+
+                                </div>
+                            </div>
+                        </div>
+
+                        <!-- #Iklan Box-->
+                        <div class="mb-2 justify-content-center col-12 mx-auto">
+                            <a href="">
+                                <img src="img/banner_iklan_Trakteer.png" alt="" class="img-fluid mb-2 mx-auto">
+                            </a>
+                        </div>
+                        <!-- #Iklan Box -->
+                        
+                    </div>
 
 
                 </div>
@@ -347,8 +444,8 @@
                     </div>
 
                     <div class="col-12 col-sm-6 col-md-6 col-lg-12 mb-1 d-flex justify-content-center">
-                        <iframe class="embed-responsive-item "
-                            src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fweb.facebook.com%2Fserayufansub60fps%2Fcommunity%2F%3Fref%3Dpage_internal&tabs=timeline&width=250&height=500&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId"
+                        <iframe class="embed-responsive-item"
+                            src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2Fserayufansub60fps%2F&tabs=timeline&width=240&height=400&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId"
                             width="240" height="400" style="border:none;overflow:hidden" scrolling="no" frameborder="0"
                             allowfullscreen="true"
                             allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
