commit index card fix

--- a/AnimePages.html
+++ b/AnimePages.html
@@ -341,7 +341,7 @@
 
                                                     <div class="col-12 col-md-6">
                                                         <table
-                                                            class="table table-sm tableBottom infoAnime table-bordered ">
+                                                            class="table table-sm tableBottom infoAnime table-bordered table-hover">
                                                             <thead>
                                                                 <tr>
                                                                     <th scope="col">Anime Download Link</th>
@@ -393,7 +393,7 @@
 
                                                     <div class="col-12 col-md-6">
                                                         <table
-                                                            class="table table-sm tableBottom infoAnime table-bordered ">
+                                                            class="table table-sm tableBottom infoAnime table-bordered table-hover">
                                                             <thead>
                                                                 <tr>
                                                                     <th scope="col">Subtitle only</th>
@@ -482,6 +482,8 @@
                                     class="bi bi-youtube"></i></a>
                         </div>
                     </div>
+
+                    
 
 
                     <div class="col-12 col-sm-6 col-md-6 col-lg-12 mb-1 d-flex justify-content-center">
