--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
               </div>
             </div>
             <div class="carousel-item">
-              <img src="img/banner_fp_under contructioon.png" class="d-block w-100" alt="...">
+              <img src="img/banner_fp_support.png" class="d-block w-100" alt="...">
               <div class="carousel-caption d-md-block">
                 <h5 class="h5carousel">Tolong Support Kami</h5>
                 <p class="pcarousel">Support kalian merupakan hal terpenting bagi kami. Share website ini ke teman
@@ -184,11 +184,11 @@
 
           <!-- #Card-->
           <div class="col-6 col-sm-4 col-lg-3  mb-4 my-col">
-            <div class="card">
+            <div class="card catalogCard">
               <a class="btn btn-success" href="movie.php"> Movie </a>
               <a href="AnimePages.html" class="myshow"><img class="card-img-top h-100" src="img/Anime/Kimi_no_nawa.jpg">
-                <div class="card-img-overlay anchor-bg-color">
-                  <h5 class="card-title img-overlay-anchor"><strong>Judul</strong></h5>
+                <div class="card-img-overlay anchor-bg-color overlay">
+                  <h6 class="card-title img-overlay-anchor"><strong>Kimi No nawa</strong></h6>
                   <small class="text-white">Post on 20-02-2020</small>
                 </div>
               </a>
@@ -199,11 +199,11 @@
 
           <!-- #Card-->
           <div class="col-6 col-sm-4 col-lg-3  mb-4 my-col">
-            <div class="card">
+            <div class="card catalogCard">
               <a class="btn btn-success" href="movie.php"> Movie </a>
               <a href="AnimePages.html" class="myshow"><img class="card-img-top h-100" src="img/Anime/Kimi_no_nawa.jpg">
-                <div class="card-img-overlay anchor-bg-color">
-                  <h5 class="card-title img-overlay-anchor"><strong>Judul</strong></h5>
+                <div class="card-img-overlay anchor-bg-color overlay">
+                  <h6 class="card-title img-overlay-anchor"><strong>Kimi No nawa</strong></h6>
                   <small class="text-white">Post on 20-02-2020</small>
                 </div>
               </a>
@@ -214,11 +214,11 @@
 
           <!-- #Card-->
           <div class="col-6 col-sm-4 col-lg-3  mb-4 my-col">
-            <div class="card">
+            <div class="card catalogCard">
               <a class="btn btn-success" href="movie.php"> Movie </a>
               <a href="AnimePages.html" class="myshow"><img class="card-img-top h-100" src="img/Anime/Kimi_no_nawa.jpg">
-                <div class="card-img-overlay anchor-bg-color">
-                  <h5 class="card-title img-overlay-anchor"><strong>Judul</strong></h5>
+                <div class="card-img-overlay anchor-bg-color overlay">
+                  <h6 class="card-title img-overlay-anchor"><strong>Kimi No nawa</strong></h6>
                   <small class="text-white">Post on 20-02-2020</small>
                 </div>
               </a>
@@ -229,11 +229,11 @@
 
           <!-- #Card-->
           <div class="col-6 col-sm-4 col-lg-3  mb-4 my-col">
-            <div class="card">
+            <div class="card catalogCard">
               <a class="btn btn-success" href="movie.php"> Movie </a>
               <a href="AnimePages.html" class="myshow"><img class="card-img-top h-100" src="img/Anime/Kimi_no_nawa.jpg">
-                <div class="card-img-overlay anchor-bg-color">
-                  <h5 class="card-title img-overlay-anchor"><strong>Judul</strong></h5>
+                <div class="card-img-overlay anchor-bg-color overlay">
+                  <h6 class="card-title img-overlay-anchor"><strong>Kimi No nawa</strong></h6>
                   <small class="text-white">Post on 20-02-2020</small>
                 </div>
               </a>
@@ -244,11 +244,11 @@
 
           <!-- #Card-->
           <div class="col-6 col-sm-4 col-lg-3  mb-4 my-col">
-            <div class="card">
+            <div class="card catalogCard">
               <a class="btn btn-success" href="movie.php"> Movie </a>
               <a href="AnimePages.html" class="myshow"><img class="card-img-top h-100" src="img/Anime/Kimi_no_nawa.jpg">
-                <div class="card-img-overlay anchor-bg-color">
-                  <h5 class="card-title img-overlay-anchor"><strong>Judul</strong></h5>
+                <div class="card-img-overlay anchor-bg-color overlay">
+                  <h6 class="card-title img-overlay-anchor"><strong>Kimi No nawa</strong></h6>
                   <small class="text-white">Post on 20-02-2020</small>
                 </div>
               </a>
@@ -259,11 +259,11 @@
 
           <!-- #Card-->
           <div class="col-6 col-sm-4 col-lg-3  mb-4 my-col">
-            <div class="card">
+            <div class="card catalogCard">
               <a class="btn btn-success" href="movie.php"> Movie </a>
               <a href="AnimePages.html" class="myshow"><img class="card-img-top h-100" src="img/Anime/Kimi_no_nawa.jpg">
-                <div class="card-img-overlay anchor-bg-color">
-                  <h5 class="card-title img-overlay-anchor"><strong>Judul</strong></h5>
+                <div class="card-img-overlay anchor-bg-color overlay">
+                  <h6 class="card-title img-overlay-anchor"><strong>Kimi No nawa</strong></h6>
                   <small class="text-white">Post on 20-02-2020</small>
                 </div>
               </a>
@@ -271,15 +271,14 @@
             </div>
           </div>
           <!-- #endCard -->
-
 
           <!-- #Card-->
           <div class="col-6 col-sm-4 col-lg-3  mb-4 my-col">
-            <div class="card">
+            <div class="card catalogCard">
               <a class="btn btn-success" href="movie.php"> Movie </a>
               <a href="AnimePages.html" class="myshow"><img class="card-img-top h-100" src="img/Anime/Kimi_no_nawa.jpg">
-                <div class="card-img-overlay anchor-bg-color">
-                  <h5 class="card-title img-overlay-anchor"><strong>Judul</strong></h5>
+                <div class="card-img-overlay anchor-bg-color overlay">
+                  <h6 class="card-title img-overlay-anchor"><strong>Kimi No nawa</strong></h6>
                   <small class="text-white">Post on 20-02-2020</small>
                 </div>
               </a>
@@ -287,15 +286,14 @@
             </div>
           </div>
           <!-- #endCard -->
-
 
           <!-- #Card-->
           <div class="col-6 col-sm-4 col-lg-3  mb-4 my-col">
-            <div class="card">
+            <div class="card catalogCard">
               <a class="btn btn-success" href="movie.php"> Movie </a>
               <a href="AnimePages.html" class="myshow"><img class="card-img-top h-100" src="img/Anime/Kimi_no_nawa.jpg">
-                <div class="card-img-overlay anchor-bg-color">
-                  <h5 class="card-title img-overlay-anchor"><strong>Judul</strong></h5>
+                <div class="card-img-overlay anchor-bg-color overlay">
+                  <h6 class="card-title img-overlay-anchor"><strong>Kimi No nawa</strong></h6>
                   <small class="text-white">Post on 20-02-2020</small>
                 </div>
               </a>
@@ -303,6 +301,18 @@
             </div>
           </div>
           <!-- #endCard -->
+
+          <div class="col-12">
+            <nav aria-label="Page navigation example">
+              <ul class="pagination justify-content-center">
+                <li class="page-item"><a class="page-link" href="#">Previous</a></li>
+                <li class="page-item"><a class="page-link" href="#">1</a></li>
+                <li class="page-item"><a class="page-link" href="#">2</a></li>
+                <li class="page-item"><a class="page-link" href="#">3</a></li>
+                <li class="page-item"><a class="page-link" href="#">Next</a></li>
+              </ul>
+            </nav>
+          </div>
 
         </div>
 
