commit ReWork Design - Index - Sticky sidebar

--- a/AnimePages.html
+++ b/AnimePages.html
@@ -322,6 +322,7 @@
                     </div>
                     <!-- #EndTrailer Box-->
 
+                    <!-- #LinkBox-->
                     <div class="col-12">
                         <div class="bg-white rounded-corner px-3 py-3 mb-4">
                             <div class="col-12 bg-light rounded-corner border  ">
@@ -335,7 +336,6 @@
                                     <div class="col-12">
                                         <div class="row">
                                             <div class="col-12">
-
                                                 <div class="row">
                                                     <p class="col-12 mt-4">Google Drive</p>
 
@@ -348,45 +348,19 @@
                                                                 </tr>
                                                             </thead>
                                                             <tbody>
-                                                                <tr>
-                                                                    <td><a href="">Kimi No Nawa Episode 1</a></td>
-                                                                </tr>
-                                                                <tr>
-                                                                    <td><a href="">Kimi No Nawa Episode 2</a></td>
-                                                                </tr>
-                                                                <tr>
-                                                                    <td><a href="">Kimi No Nawa Episode 3</a></td>
-                                                                </tr>
-                                                                <tr>
-                                                                    <td><a href="">Kimi No Nawa Episode 4</a></td>
-                                                                </tr>
-                                                                <tr>
-                                                                    <td><a href="">Kimi No Nawa Episode 5</a></td>
-                                                                </tr>
-                                                                <tr>
-                                                                    <td><a href="">Kimi No Nawa Episode 6</a></td>
-                                                                </tr>
-                                                                <tr>
-                                                                    <td><a href="">Kimi No Nawa Episode 7</a></td>
-                                                                </tr>
-                                                                <tr>
-                                                                    <td><a href="">Kimi No Nawa Episode 8</a></td>
-                                                                </tr>
-                                                                <tr>
-                                                                    <td><a href="">Kimi No Nawa Episode 9</a></td>
-                                                                </tr>
-                                                                <tr>
-                                                                    <td><a href="">Kimi No Nawa Episode 10</a></td>
-                                                                </tr>
-                                                                <tr>
-                                                                    <td><a href="">Kimi No Nawa Episode 11</a></td>
-                                                                </tr>
-                                                                <tr>
-                                                                    <td><a href="">Kimi No Nawa Episode 12</a></td>
-                                                                </tr>
-                                                                <tr>
-                                                                    <td><a href="">Kimi No Nawa Episode 13</a></td>
-                                                                </tr>
+                                                                <tr><td><a href="">Kimi No Nawa Episode 1</a></td></tr>
+                                                                <tr><td><a href="">Kimi No Nawa Episode 2</a></td></tr>
+                                                                <tr><td><a href="">Kimi No Nawa Episode 3</a></td></tr>
+                                                                <tr><td><a href="">Kimi No Nawa Episode 4</a></td></tr>
+                                                                <tr><td><a href="">Kimi No Nawa Episode 5</a></td></tr>
+                                                                <tr><td><a href="">Kimi No Nawa Episode 6</a></td></tr>
+                                                                <tr><td><a href="">Kimi No Nawa Episode 7</a></td></tr>
+                                                                <tr><td><a href="">Kimi No Nawa Episode 8</a></td></tr>
+                                                                <tr><td><a href="">Kimi No Nawa Episode 9</a></td></tr>
+                                                                <tr><td><a href="">Kimi No Nawa Episode 10</a></td></tr>
+                                                                <tr><td><a href="">Kimi No Nawa Episode 11</a></td></tr>
+                                                                <tr><td><a href="">Kimi No Nawa Episode 12</a></td></tr>
+
                                                             </tbody>
                                                         </table>
                                                     </div>
@@ -400,45 +374,19 @@
                                                                 </tr>
                                                             </thead>
                                                             <tbody>
-                                                                <tr>
-                                                                    <td><a href="">Subtitle only Episode 1</a></td>
-                                                                </tr>
-                                                                <tr>
-                                                                    <td><a href="">Subtitle only Episode 2</a></td>
-                                                                </tr>
-                                                                <tr>
-                                                                    <td><a href="">Subtitle only Episode 3</a></td>
-                                                                </tr>
-                                                                <tr>
-                                                                    <td><a href="">Subtitle only Episode 4</a></td>
-                                                                </tr>
-                                                                <tr>
-                                                                    <td><a href="">Subtitle only Episode 5</a></td>
-                                                                </tr>
-                                                                <tr>
-                                                                    <td><a href="">Subtitle only Episode 6</a></td>
-                                                                </tr>
-                                                                <tr>
-                                                                    <td><a href="">Subtitle only Episode 7</a></td>
-                                                                </tr>
-                                                                <tr>
-                                                                    <td><a href="">Subtitle only Episode 8</a></td>
-                                                                </tr>
-                                                                <tr>
-                                                                    <td><a href="">Subtitle only Episode 9</a></td>
-                                                                </tr>
-                                                                <tr>
-                                                                    <td><a href="">Subtitle only Episode 10</a></td>
-                                                                </tr>
-                                                                <tr>
-                                                                    <td><a href="">Subtitle only Episode 11</a></td>
-                                                                </tr>
-                                                                <tr>
-                                                                    <td><a href="">Subtitle only Episode 12</a></td>
-                                                                </tr>
-                                                                <tr>
-                                                                    <td><a href="">Subtitle only Episode 13</a></td>
-                                                                </tr>
+                                                                <tr><td><a href="">Subtitle only Episode 1</a></td></tr>
+                                                                <tr><td><a href="">Subtitle only Episode 2</a></td></tr>
+                                                                <tr><td><a href="">Subtitle only Episode 3</a></td></tr>
+                                                                <tr><td><a href="">Subtitle only Episode 4</a></td></tr>
+                                                                <tr><td><a href="">Subtitle only Episode 5</a></td></tr>
+                                                                <tr><td><a href="">Subtitle only Episode 6</a></td></tr>
+                                                                <tr><td><a href="">Subtitle only Episode 7</a></td></tr>
+                                                                <tr><td><a href="">Subtitle only Episode 8</a></td></tr>
+                                                                <tr><td><a href="">Subtitle only Episode 9</a></td></tr>
+                                                                <tr><td><a href="">Subtitle only Episode 10</a></td></tr>
+                                                                <tr><td><a href="">Subtitle only Episode 11</a></td></tr>
+                                                                <tr><td><a href="">Subtitle only Episode 12</a></td></tr>
+                                                                <tr><td><a href="">Subtitle only Episode 13</a></td></tr>
                                                             </tbody>
                                                         </table>
                                                     </div>
@@ -463,6 +411,7 @@
                         <!-- #Iklan Box -->
 
                     </div>
+                    <!-- #endLinkBox -->
 
 
                 </div>
@@ -471,37 +420,40 @@
             <!-- #endshowcase -->
 
             <!-- #Sidebar-->
-            <div class="col-12 col-sm-12 col-md-12 col-lg-3 ">
-                <div class="row">
-                    <div class="col-12 col-sm-12 col-md-12 col-lg-12 mb-1">
-                        <div class="social bg-dark">
-                            <a href="https://www.instagram.com/serayufansub/"><i class="bi bi-instagram"></i></a>
-                            <a href="https://discord.com/invite/ycTY2gk9k3"><i class="bi bi-discord"></i></a>
-                            <a href="https://www.facebook.com/serayufansub60fps/"><i class="bi bi-facebook"></i></a>
-                            <a href="https://www.youtube.com/channel/UCUJYB4Sr7A2R7RhjPeEiW_Q"><i
-                                    class="bi bi-youtube"></i></a>
+            <div class="col-12 col-lg-3 ">
+                <div class="col-12">
+                    <div class="row">
+                        <div class="col-12  mb-1">
+                            <div class="social bg-dark">
+                                <a href="https://www.instagram.com/serayufansub/"><i class="bi bi-instagram"></i></a>
+                                <a href="https://discord.com/invite/ycTY2gk9k3"><i class="bi bi-discord"></i></a>
+                                <a href="https://www.facebook.com/serayufansub60fps/"><i class="bi bi-facebook"></i></a>
+                                <a href="https://www.youtube.com/channel/UCUJYB4Sr7A2R7RhjPeEiW_Q"><i
+                                        class="bi bi-youtube"></i></a>
+                            </div>
                         </div>
                     </div>
+                </div>
+                <div class="col-12 sticky-top">
+                    <div class="row">
 
-                    
+                        <div class="col-12 col-sm-6 col-lg-12 mb-1 d-flex justify-content-center ">
+                            <iframe class="embed-responsive-item"
+                                src="https://discord.com/widget?id=788456247476617326&theme=dark" width="240"
+                                height="400" allowtransparency="true" frameborder="0"
+                                sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
+                        </div>
 
+                        <div class="col-12 col-sm-6 col-lg-12 mb-1 d-flex justify-content-center ">
+                            <iframe class="embed-responsive-item"
+                                src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2Fserayufansub60fps%2F&tabs=timeline&width=240&height=400&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId"
+                                width="240" height="300" style="border:none;overflow:hidden" scrolling="no"
+                                frameborder="0" allowfullscreen="true"
+                                allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
+                        </div>
 
-                    <div class="col-12 col-sm-6 col-md-6 col-lg-12 mb-1 d-flex justify-content-center">
-                        <iframe class="embed-responsive-item"
-                            src="https://discord.com/widget?id=788456247476617326&theme=dark" width="240" height="400"
-                            allowtransparency="true" frameborder="0"
-                            sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
-                    </div>
-
-                    <div class="col-12 col-sm-6 col-md-6 col-lg-12 mb-1 d-flex justify-content-center">
-                        <iframe class="embed-responsive-item"
-                            src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2Fserayufansub60fps%2F&tabs=timeline&width=240&height=400&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId"
-                            width="240" height="400" style="border:none;overflow:hidden" scrolling="no" frameborder="0"
-                            allowfullscreen="true"
-                            allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
                     </div>
                 </div>
-
             </div>
             <!-- #endSidebar -->
 
