commit ReWork Design - Index - fix card linking

--- a/index.html
+++ b/index.html
@@ -76,14 +76,19 @@
                 <a class="dropdown-item" href="g_page.php">See More...</a>
               </div>
             </li>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
+                aria-haspopup="true" aria-expanded="false">
+                Type
+              </a>
+              <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <a class="dropdown-item" href="#">TV Series</a>
+                <a class="dropdown-item" href="#">Movie</a>
+                <a class="dropdown-item" href="#">Ova / Ona / Special</a>
+              </div>  
+            </li>
             <li class="nav-item">
               <a class="nav-link" href="l_update.php">Latest Update</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="movie.php">Movies</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="tv_series.php">Tv Series</a>
             </li>
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
@@ -191,7 +196,7 @@
                       <small class="text-white">Post on 20-02-2020</small>
                     </div>
                   </a>
-                  <a class="btn btn-primary" href="AnimePages.html"> Download </a>
+                  <a class="btn btn-primary" href="AnimePages.html#download"> Download </a>
                 </div>
               </div>
               <!-- #endCard -->
