--- a/AnimePages.html
+++ b/AnimePages.html
@@ -206,15 +206,15 @@
                             <div class="col-12 bg-light rounded-corner border  ">
 
                                 <div class="col-12 px-0 py-1 text-justify">
-                                    <a onclick="spoiler_desc()" data-toggle="collapse" href="#collapseDesc"
-                                        role="button" aria-expanded="false" aria-controls="collapseDesc">
+                                    <a data-toggle="collapse" href="#collapseMainDesc" role="button"
+                                        aria-expanded="false" aria-controls="collapseMainDesc">
                                         <div class="bg-primary text-white text-center rounded-corner border score mb-1">
                                             Description
                                         </div>
                                     </a>
 
 
-                                    <div>
+                                    <div class="collapse show " id="collapseMainDesc">
                                         <p>Mitsuha Miyamizu, a high school girl, yearns to live the life of a boy in the
                                             bustling
                                             city of Tokyo—a dream that stands in stark contrast to her present life in
@@ -274,15 +274,15 @@
                             <div class="col-12 bg-light rounded-corner border  ">
 
                                 <div class="col-12 px-0 py-1 text-justify">
-                                    <a onclick="spoiler_video()" data-toggle="collapse" href="#collapseSS" role="button"
-                                        aria-expanded="false" aria-controls="collapseSS">
+                                    <a data-toggle="collapse" href="#collapseMainSS" role="button" aria-expanded="false"
+                                        aria-controls="collapseSS">
                                         <div class="bg-primary text-white text-center rounded-corner border score mb-1">
                                             Trailer and Screenshot
                                         </div>
                                     </a>
 
 
-                                    <div class="col-12">
+                                    <div class="collapse show col-12" id="collapseMainSS">
                                         <div class="row">
                                             <div
                                                 class="embed-responsive embed-responsive-16by9 col-12 col-md-10 offset-md-1  mb-1">
@@ -323,7 +323,7 @@
                     <!-- #EndTrailer Box-->
 
                     <!-- #LinkBox-->
-                    <div class="col-12">
+                    <div class="col-12 " id="download">
                         <div class="bg-white rounded-corner px-3 py-3 mb-4">
                             <div class="col-12 bg-light rounded-corner border  ">
 
@@ -348,18 +348,42 @@
                                                                 </tr>
                                                             </thead>
                                                             <tbody>
-                                                                <tr><td><a href="">Kimi No Nawa Episode 1</a></td></tr>
-                                                                <tr><td><a href="">Kimi No Nawa Episode 2</a></td></tr>
-                                                                <tr><td><a href="">Kimi No Nawa Episode 3</a></td></tr>
-                                                                <tr><td><a href="">Kimi No Nawa Episode 4</a></td></tr>
-                                                                <tr><td><a href="">Kimi No Nawa Episode 5</a></td></tr>
-                                                                <tr><td><a href="">Kimi No Nawa Episode 6</a></td></tr>
-                                                                <tr><td><a href="">Kimi No Nawa Episode 7</a></td></tr>
-                                                                <tr><td><a href="">Kimi No Nawa Episode 8</a></td></tr>
-                                                                <tr><td><a href="">Kimi No Nawa Episode 9</a></td></tr>
-                                                                <tr><td><a href="">Kimi No Nawa Episode 10</a></td></tr>
-                                                                <tr><td><a href="">Kimi No Nawa Episode 11</a></td></tr>
-                                                                <tr><td><a href="">Kimi No Nawa Episode 12</a></td></tr>
+                                                                <tr>
+                                                                    <td><a href="">Kimi No Nawa Episode 1</a></td>
+                                                                </tr>
+                                                                <tr>
+                                                                    <td><a href="">Kimi No Nawa Episode 2</a></td>
+                                                                </tr>
+                                                                <tr>
+                                                                    <td><a href="">Kimi No Nawa Episode 3</a></td>
+                                                                </tr>
+                                                                <tr>
+                                                                    <td><a href="">Kimi No Nawa Episode 4</a></td>
+                                                                </tr>
+                                                                <tr>
+                                                                    <td><a href="">Kimi No Nawa Episode 5</a></td>
+                                                                </tr>
+                                                                <tr>
+                                                                    <td><a href="">Kimi No Nawa Episode 6</a></td>
+                                                                </tr>
+                                                                <tr>
+                                                                    <td><a href="">Kimi No Nawa Episode 7</a></td>
+                                                                </tr>
+                                                                <tr>
+                                                                    <td><a href="">Kimi No Nawa Episode 8</a></td>
+                                                                </tr>
+                                                                <tr>
+                                                                    <td><a href="">Kimi No Nawa Episode 9</a></td>
+                                                                </tr>
+                                                                <tr>
+                                                                    <td><a href="">Kimi No Nawa Episode 10</a></td>
+                                                                </tr>
+                                                                <tr>
+                                                                    <td><a href="">Kimi No Nawa Episode 11</a></td>
+                                                                </tr>
+                                                                <tr>
+                                                                    <td><a href="">Kimi No Nawa Episode 12</a></td>
+                                                                </tr>
 
                                                             </tbody>
                                                         </table>
@@ -374,19 +398,45 @@
                                                                 </tr>
                                                             </thead>
                                                             <tbody>
-                                                                <tr><td><a href="">Subtitle only Episode 1</a></td></tr>
-                                                                <tr><td><a href="">Subtitle only Episode 2</a></td></tr>
-                                                                <tr><td><a href="">Subtitle only Episode 3</a></td></tr>
-                                                                <tr><td><a href="">Subtitle only Episode 4</a></td></tr>
-                                                                <tr><td><a href="">Subtitle only Episode 5</a></td></tr>
-                                                                <tr><td><a href="">Subtitle only Episode 6</a></td></tr>
-                                                                <tr><td><a href="">Subtitle only Episode 7</a></td></tr>
-                                                                <tr><td><a href="">Subtitle only Episode 8</a></td></tr>
-                                                                <tr><td><a href="">Subtitle only Episode 9</a></td></tr>
-                                                                <tr><td><a href="">Subtitle only Episode 10</a></td></tr>
-                                                                <tr><td><a href="">Subtitle only Episode 11</a></td></tr>
-                                                                <tr><td><a href="">Subtitle only Episode 12</a></td></tr>
-                                                                <tr><td><a href="">Subtitle only Episode 13</a></td></tr>
+                                                                <tr>
+                                                                    <td><a href="">Subtitle only Episode 1</a></td>
+                                                                </tr>
+                                                                <tr>
+                                                                    <td><a href="">Subtitle only Episode 2</a></td>
+                                                                </tr>
+                                                                <tr>
+                                                                    <td><a href="">Subtitle only Episode 3</a></td>
+                                                                </tr>
+                                                                <tr>
+                                                                    <td><a href="">Subtitle only Episode 4</a></td>
+                                                                </tr>
+                                                                <tr>
+                                                                    <td><a href="">Subtitle only Episode 5</a></td>
+                                                                </tr>
+                                                                <tr>
+                                                                    <td><a href="">Subtitle only Episode 6</a></td>
+                                                                </tr>
+                                                                <tr>
+                                                                    <td><a href="">Subtitle only Episode 7</a></td>
+                                                                </tr>
+                                                                <tr>
+                                                                    <td><a href="">Subtitle only Episode 8</a></td>
+                                                                </tr>
+                                                                <tr>
+                                                                    <td><a href="">Subtitle only Episode 9</a></td>
+                                                                </tr>
+                                                                <tr>
+                                                                    <td><a href="">Subtitle only Episode 10</a></td>
+                                                                </tr>
+                                                                <tr>
+                                                                    <td><a href="">Subtitle only Episode 11</a></td>
+                                                                </tr>
+                                                                <tr>
+                                                                    <td><a href="">Subtitle only Episode 12</a></td>
+                                                                </tr>
+                                                                <tr>
+                                                                    <td><a href="">Subtitle only Episode 13</a></td>
+                                                                </tr>
                                                             </tbody>
                                                         </table>
                                                     </div>
@@ -412,6 +462,8 @@
 
                     </div>
                     <!-- #endLinkBox -->
+
+                   
 
 
                 </div>
